main e blockchain feitos

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <div class="logo"><img src="public/images/OABDF-Logo Branca.png" alt=""></div>
             <div class="nav-bar">
             <ul>
-                <li>Validade Jurídica</li>
-                <li>Dúvidas</li>
-                <li>Contato</li>
+                <li id="validade">Validade Jurídica</li>
+                <li id="duvidas">Dúvidas</li>
+                <li id="contato">Contato</li>
                 <li><input type="button" value="Entrar"></li>
             </ul>
             </div>
@@ -28,33 +28,63 @@
             <button id="see">Veja como funciona</button>
         </div>
         <h2>Ainda gasta tempo e dinheiro assinando documentos manualmente?</h2>
-        <p>Veja como é simples e seguro criar e assinar seus documentos eletronicamente.</p>
-        <img src="public/images/Rectangle 6.png" alt="">
+        <p id="documentos">Veja como é simples e seguro criar e assinar seus documentos eletronicamente.</p>
+        <img src="public/images/document copiar.png" alt="" id="document">
+        <h4 id="h4-document">Crie seus documentos</h4>
+        <p id="p-document">Faça o upload de seus documentos, planilhas, apresentações e PDFs e junte em um único documento.</p>
+
+        <img src="public/images/group.png" alt="" id="group">
+        <h4 id="h4-group">Convide signatários</h4>
+        <p id="p-group">Convide pessoas para assinarem gratuitamente seus documentos</p>
+
+        <img src="public/images/contract copiar.png" alt="" id="contract">
+        <h4 id="h4-contract">Assine de qualquer lugar</h4>
+        <p id="p-contract">Assine seus documentos de qualquer lugar e a qualquer hora utilizando o seu computador ou seu celular.</p>
+
+        <img src="public/images/shield copiar.png" alt="" id="shield">
+        <h4 id="h4-shield">Segurança de nível bancário</h4>
+        <p id="p-shield">Fique tranquilo. Seus documentos são tratados com o mesmo nível de segurança utilizado pelos bancos.</p>
+
+        <img src="public/images/regulation copiar.png" alt="" id="regulation">
+        <h4 id="h4-regulation">Validade jurídica</h4>
+        <p id="p-regulation">Todos os documentos assinados possuem validade jurídica, não se preocupe! Conforme Lei Federal nº 14.063/2020 documentos com assinatura eletrônica são plenamente válidos e eficazes, inclusive com reconhecimento pelos órgãos públicos e governos.</p>
+
+        <img src="public/images/recycle (1) copiar.png" alt="" id="recycle">
+        <h4 id="h4-recycle">Seja sustentável</h4>
+        <p id="p-recycle">Seja sustentável Evite a impressão de documentos. Pode deixar que guardamos ele cuidadosamente em nosso ambiente seguro.</p>
+
+        <img  id="barra" src="public/images/Rectangle 6.png" alt="">
     </div>
 
     <div class="blockchain">
         <h2>Blockchain</h2>
-        <img src="public/images/Rectangle 6.png" alt="">
+        <p>A blockchain (também conhecido como “o protocolo da confiança”) é uma tecnologia de registro distribuído que visa a descentralização como medida de 
+            segurança. São bases de registros e dados distribuídos e compartilhados que têm a função de criar um índice global para todas as transações que ocorrem 
+            em um determinado mercado. <br> <br> Aqui na 2Signer, todos seus documentos são protegidos com sua rede blockchain. Criando mais confiança entre todas as partes envolvidas no processo de
+             assinatura dos documentos.</p>
+        <img src="public/images/621759-conceito-de-negocio-abstrato-linha-e-ponto-acordo-aperto-de-mao-desenho-geometrico-de-linha-de-ponto-poligonal-ilustracao-em-conexao-de-link-de-hiperlink-de-ligacao-de-maos-de-maos-vetor copiar.jpg" alt="" id="maos">
+        <button>Crie sua conta gratuitamente agora mesmo</button>
+        <img src="public/images/Rectangle 6.png" alt="" id="barra">
     </div>
 
     <div class="segments">
         <h2>Usado por diversos segmentos</h2>
-        <img src="public/images/Rectangle 6.png" alt="">
+        <img src="public/images/Rectangle 6.png" alt="" id="barra">
     </div>
 
     <div class="juridic">
         <h2>Validade Jurídica</h2>
-        <img src="public/images/Rectangle 6.png" alt="">
+        <img src="public/images/Rectangle 6.png" alt="" id="barra">
     </div>
 
     <div class="prices">
         <h2>Comece agora mesmo <span>a enviar e assinar documentos eletronicamente</span></h2>
-        <img src="public/images/Rectangle 6.png" alt="">
+        <img src="public/images/Rectangle 6.png" alt="" id="barra">
     </div>
 
     <div class="help">
         <h2>Como podemos ajudar?</h2>
-        <img src="public/images/Rectangle 6.png" alt="">
+        <img src="public/images/Rectangle 6.png" alt="" id="barra">
     </div>
 
     <div class="social-media">
