--- a/index.html
+++ b/index.html
@@ -69,6 +69,19 @@
 
     <div class="segments">
         <h2>Usado por diversos segmentos</h2>
+        <p>Veja alguns exemplos do uso de assinatura eletrônica</p>
+        <img src="public/images/home copiar.png" alt="" id="home">
+        <h4 id="h4-home">Imobiliárias</h4>
+        <p id="p-home">Não importa o tamanho da imobiliária, sabemos que a burocracia dos contratos toma tempo.</p>
+
+        <img src="public/images/accounting copiar.png" alt="" id="accounting">
+        <h4 id="h4-accounting">Contabilidade</h4>
+        <p id="p-accounting">Fique tranquilo. Seus documentos são tratados com o mesmo nível de segurança utilizado pelos bancos.</p>
+
+        <img src="public/images/presentation copiar.png" alt="" id="presentation">
+        <h4 id="h4-presentation">Escolas</h4>
+        <p id="p-presentation">Por que não tornar o processo de matrículas da sua escola mais prático e escalável? Contratos reconhecidos pelas partes com apenas alguns cliques e 100% online</p>
+
         <img src="public/images/Rectangle 6.png" alt="" id="barra">
     </div>
 
