inicio page validade juridica

--- a/index.html
+++ b/index.html
@@ -87,6 +87,23 @@
 
     <div class="juridic">
         <h2>Validade Jurídica</h2>
+        <img src="public/images/02.jpg" alt="">
+        <p>
+            O termo “assinatura eletrônica” refere-se a qualquer mecanismo eletrônico, não necessariamente criptográfico, para identificar alguém de forma induvidosa, seja por meio de escaneamento de uma assinatura,
+            identificação por impressão digital, endereço IP, e-mail ou simples escrita do nome completo para identificar o remetente de uma mensagem
+            eletrônica ou partes em um contrato ou documento. <br> <br>            
+            A Lei Federal nº 14.063/2020 é que regula a assinatura eletrônica no Brasil seja na iniciativa privada ou na interação com o Poder Público em geral. 
+            Essa lei em conjunto com outras normas é que garante o valor probante
+            dos documentos, inclusive os documentos bancários, deixando expresso que não apenas os documentos assinados com certificados digitais vinculados ao ICP-Brasil que tem valor jurídico. <br> <br>            
+            Inclusive o Conselho da Justiça Federal já afirmou em seu Enunciado 297 que “o documento eletrônico tem valor probante, desde que seja apto a conservar a integridade de seu conteúdo e idôneo a apontar sua autoria, independentemente da tecnologia empregada”. <br> <br>            
+            Estamos em conformidade com a Lei Geral de Proteção de Dados <br><br>            
+            Quer saber mais, acesse as normas jurídicas nos links a seguir, ou clique <br>
+            no botão abaixo para nos mandar uma mensagem que teremos o imenso prazer em esclarecer suas dúvidas. <br> <br>            
+            Link para a Lei Federal nº 14.063/2020 <br>
+            Link para a Circular nº 3.829/2017 do Banco Central do Brasil <br>
+            Link para a Enunciado 297 do Conselho Nacional da Justiça Federal <br>
+        </p>
+        <button>Saiba mais</button>
         <img src="public/images/Rectangle 6.png" alt="" id="barra">
     </div>
 
