juridic e price finalizados

--- a/index.html
+++ b/index.html
@@ -109,6 +109,48 @@
 
     <div class="prices">
         <h2>Comece agora mesmo <span>a enviar e assinar documentos eletronicamente</span></h2>
+        <p>Rápido, seguro e juridicamente válido.</p>
+        <div class="tcontainer-basic">
+            <h4>Básico</h4>
+        </div>
+        <div class="container-basic">
+            <h4>Gratuito</h4>
+            <p>5 documentos por mês<br><br> Trilha de auditoria<br><br> Criptografia<br><br> Validade jurídica<br><br> Assinatura digital<br><br> Assinatura eletrônica
+            </p>
+            <button>Criar Conta</button>
+        </div>
+
+        <div class="tcontainer-standard">
+            <h4>Padrão</h4>
+            <p>Recomendável</p>
+        </div>
+        <div class="container-standard">
+            <h4>De: R$34,90 <br><br> Por: R$19,90 / mês</h4>
+            <p>15 documentos por mês<br><br> Trilha de auditoria<br><br> Criptografia<br><br> Validade jurídica<br><br> Assinatura digital<br><br> Assinatura eletrônica
+            </p>
+            <button>Criar Conta</button>
+        </div>
+
+        <div class="tcontainer-premium">
+            <h4>Premium</h4>
+        </div>
+        <div class="container-premium">
+            <h4>De: R$74,90 <br><br> Por: R$44,90 / mês</h4>
+            <p>100 documentos por mês<br><br> Trilha de auditoria<br><br> Criptografia<br><br> Validade jurídica<br><br> Assinatura digital<br><br> Assinatura eletrônica
+            </p>
+            <button>Criar Conta</button>
+        </div>
+
+        <div class="tcontainer-unlimited">
+            <h4>Ilimitado</h4>
+        </div>
+        <div class="container-unlimited">
+            <h4>De: R$119,90 <br><br> Por: R$69,90 / mês</h4>
+            <p>Documentos ilimitados<br><br> Trilha de auditoria<br><br> Criptografia<br><br> Validade jurídica<br><br> Assinatura digital<br><br> Assinatura eletrônica
+            </p>
+            <button>Criar Conta</button>
+        </div>
+
         <img src="public/images/Rectangle 6.png" alt="" id="barra">
     </div>
 
