footer finalizado + fontes e detalhes de estilização

--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100&family=Roboto+Mono:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="public/styles.css">
     <title>OAB Signer</title>
 </head>
@@ -156,15 +155,46 @@
 
     <div class="help">
         <h2>Como podemos ajudar?</h2>
+        <h4>Esclarecimento das dúvidas mais frequentes</h4>
+        <p id="esq"><span>Um documento assinado com a OAB-DF Signer depende do <br>reconhecimento da assinatura no cartório para ter validade <br>jurídica? <br></span> 
+            Não é necessário. Um documento assinado com a OAB-DF Signer atende a todos os requisitos da Lei Federal nº 14.063/2020 e de outras normas, sendo certo que todo documento assinado eletronicamente em nossa plataforma tem validade jurídica da mesma forma que os assinados com certificado digital do ICP-Brasil. <br><br> 
+            <span>Necessito ir ao cartório ou de um advogado para que um documento assinado com a OAB-DF Signer  tenha validade jurídica? <br></span>                     
+            Não. Um documento assinado eletronicamente ou digitalmente com a 
+            OAB-DF Signer tem todas as propriedades de autenticidade e integridade que garantem a sua validade jurídica. <br><br>            
+            <span>Quais são os formatos de arquivos que a OAB-DF Signer dá suporte? <br></span> 
+            Todo os principais formatos. Arquivos em Microsoft Word (.doc), Microsoft Excel (.xls), Microsoft Power Point (.ppt), Adobe (.pdf) e até HTML podem ser utilizados na criação de um documento na plataforma. <br><br>            
+            <span>Posso criar um documento misturando diferentes arquivos? <br></span>
+            Sim. Basta que no momento da criação do documento ou dossiê você escolha os diferentes documentos, inclusive de diferentes formatos e fazer o upload. Pronto, os documentos estarão aptos a serem assinados.</p>
+        <p id="dir"><span>Preciso guardar o documento assinado com a OAB-DF Signer de forma impressa ou digital em algum lugar? <br></span> 
+            Não. A nossa plataforma de assinatura eletrônica armazena todos os seus documentos que forem assinados aqui, de forma segura, ilimitada e on-line, dispensando a necessidade de cuidados adicionais. É a forma mais inteligente de ganhar eficiência com os seus documentos. Basta acessar sua conta e eles sempre estarão lá quando você precisar. <br><br>            
+            <span>Consigo assinar eletronicamente os documentos pelo celular?</span> 
+            Sim. Todos os que estiverem vinculados a um documento poderão assiná-lo por meio de um smartphone, onde receberão de forma automática uma mensagem por email ou SMS e pronto, basta clicar e assinar. Simples, rápido e seguro. <br><br>            
+            <span>Preciso instalar algum programa para conseguir assinar do meu computador, notebook, tablet ou celular?</span> 
+            Não é necessário instalar nada para assinar seu documento eletronicamente! Apenas nos casos excepcionais de assinar documento com a utilização de um certificado digital do ICP-Brasil é que deve ser utilizado um aplicativo. Muito fácil!</p>  
         <img src="public/images/Rectangle 6.png" alt="" id="barra">
     </div>
 
     <div class="social-media">
+        <img src="public/images/facebook.png" alt="" id="fb">
+        <img src="public/images/twitter-sign.png" alt="" id="tt">
+        <img src="public/images/youtube.png" alt="" id="yt">
         <h2>Precisa de mais envios?</h2>
+        <h4>Entre em contato com nossos consultores.</h4>
+        <button>Crie sua conta gratuitamente agora mesmo</button>
     </div>
 
     <footer>
-
+        <img src="public/images/black-placeholder-variant copiar.png" alt="" id="caa-img"> 
+        <p id="caa-p">CAA DF</p>
+        <p id="caa-end">SHLN Conjunto B Bloco 02 – Asa Norte Brasília – DF – CEP 70770-560</p>
+        <img src="public/images/black-placeholder-variant copiar.png" alt="" id="oab-img"> <p id="oab-p">OAB DF</p>
+        <p id="oab-end">Conjunto B Bloco 02 – Asa Norte <br> Brasília – DF – CEP 70770-560</p>
+        <img src="public/images/facebook.png" alt="" id="fb">
+        <img src="public/images/twitter-sign.png" alt="" id="tt">
+        <img src="public/images/youtube.png" alt="" id="yt">   
+        <img src="public/images/icp-brasil-logo-BF3CE578C1-seeklogo.com copiar.png" alt="" id="icp">   
+        <p id="suport">Suporte: +55 61 3222-7657</p> <img src="public/images/whatsapp (1).png" alt="" id="wpp"> 
+        <p id="rights">CNPJ 12.573.115/0001-54 <br>© Agile Corporation Programas de Computador</p>
     </footer>
 </body>
 </html>
