correções do css + responsividade

--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
             Sim. Basta que no momento da criação do documento ou dossiê você escolha os diferentes documentos, inclusive de diferentes formatos e fazer o upload. Pronto, os documentos estarão aptos a serem assinados.</p>
         <p id="dir"><span>Preciso guardar o documento assinado com a OAB-DF Signer de forma impressa ou digital em algum lugar? <br></span> 
             Não. A nossa plataforma de assinatura eletrônica armazena todos os seus documentos que forem assinados aqui, de forma segura, ilimitada e on-line, dispensando a necessidade de cuidados adicionais. É a forma mais inteligente de ganhar eficiência com os seus documentos. Basta acessar sua conta e eles sempre estarão lá quando você precisar. <br><br>            
-            <span>Consigo assinar eletronicamente os documentos pelo celular?</span> 
+            <span>Consigo assinar eletronicamente os documentos pelo celular?<br></span>
             Sim. Todos os que estiverem vinculados a um documento poderão assiná-lo por meio de um smartphone, onde receberão de forma automática uma mensagem por email ou SMS e pronto, basta clicar e assinar. Simples, rápido e seguro. <br><br>            
-            <span>Preciso instalar algum programa para conseguir assinar do meu computador, notebook, tablet ou celular?</span> 
+            <span>Preciso instalar algum programa para conseguir assinar do meu computador, notebook, tablet ou celular?<br></span>
             Não é necessário instalar nada para assinar seu documento eletronicamente! Apenas nos casos excepcionais de assinar documento com a utilização de um certificado digital do ICP-Brasil é que deve ser utilizado um aplicativo. Muito fácil!</p>  
         <img src="public/images/Rectangle 6.png" alt="" id="barra">
     </div>
