--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
             Estamos em conformidade com a Lei Geral de Proteção de Dados <br><br>            
             Quer saber mais, acesse as normas jurídicas nos links a seguir, ou clique <br>
             no botão abaixo para nos mandar uma mensagem que teremos o imenso prazer em esclarecer suas dúvidas. <br> <br>            
-            Link para a Lei Federal nº 14.063/2020 <br>
-            Link para a Circular nº 3.829/2017 do Banco Central do Brasil <br>
-            Link para a Enunciado 297 do Conselho Nacional da Justiça Federal <br>
+            <a href="https://www.in.gov.br/en/web/dou/-/lei-n-14.063-de-23-de-setembro-de-2020-279185931" target='_blank'>Link para a Lei Federal nº 14.063/2020</a><br>
+            <a href="https://www.bcb.gov.br/estabilidadefinanceira/exibenormativo?tipo=Circular&numero=3829" target='_blank'>Link para a Circular nº 3.829/2017 do Banco Central do Brasil</a><br>
+            <a href="https://www.cjf.jus.br/enunciados/enunciado/278" target='_blank'>Link para a Enunciado 297 do Conselho Nacional da Justiça Federal</a><br>
         </p>
         <button>Saiba mais</button>
         <img src="public/images/Rectangle 6.png" alt="" id="barra">
