--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <h4>Premium</h4>
         </div>
         <div class="container-premium">
-            <h4>De: R$74,90 <br><br> Por: R$44,90 / mês</h4>
+            <h4>De: R$74,90 <br> Por: R$44,90 / mês</h4>
             <p>100 documentos por mês<br><br> Trilha de auditoria<br><br> Criptografia<br><br> Validade jurídica<br><br> Assinatura digital<br><br> Assinatura eletrônica
             </p>
             <button>Criar Conta</button>
@@ -144,7 +144,7 @@
             <h4>Ilimitado</h4>
         </div>
         <div class="container-unlimited">
-            <h4>De: R$119,90 <br><br> Por: R$69,90 / mês</h4>
+            <h4>De: R$119,90 <br> Por: R$69,90 / mês</h4>
             <p>Documentos ilimitados<br><br> Trilha de auditoria<br><br> Criptografia<br><br> Validade jurídica<br><br> Assinatura digital<br><br> Assinatura eletrônica
             </p>
             <button>Criar Conta</button>
